[package]
name = "always_send"
version = "0.0.0"
authors = ["Frank Steffahn <fdsteffahn@gmail.com>"]
license = "MIT OR Apache-2.0"
description = """
Description goes here!!
"""
repository = "https://github.com/steffahn/always_send"
homepage = "https://github.com/steffahn/always_send"
documentation = "https://docs.rs/always_send"
keywords = []
categories = ["no-std"]
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
