[package]
name = "always_send"
version = "0.1.0"
authors = ["Frank Steffahn <fdsteffahn@gmail.com>"]
license = "MIT OR Apache-2.0"
description = """
Wrapper to check `Send` only on construction, so `rustc` isn’t confused later
"""
repository = "https://github.com/steffahn/always_send"
homepage = "https://github.com/steffahn/always_send"
documentation = "https://docs.rs/always_send"
keywords = []
categories = ["no-std"]
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
stream = ["dep:futures-core"]

[dependencies]
futures-core = { version = "0.3.31", default-features = false, optional = true}

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
